# errorqtbuild

./: README.md
MyQtProject/: CMakeLists.txt  Main.cpp
